- Adjusted objtype of small stone bench. - Added some new sounds for the flute. - Added the Stonecrafting scripts. - Added the mallet and chisel to the tinkering craft menus. - Moved all statues and stone items to the Stonecrafting menus. - The fiddle is now craftable.

--- a/099/pkg/items/decorations/itemdesc.cfg
+++ b/099/pkg/items/decorations/itemdesc.cfg
@@ -1499,12 +1499,13 @@ Item 0x24d0
 // Stone items
 //////////////////
 
-Item 0x3dff
+Item 0x45b
 {
 	Name				SmallStoneBench
 	script			rotate
 	VendorSellsFor		75
 	VendorBuysFor		20
+	Color				1895
 	Weight			2
 }
 
