--- a/099/pkg/skills/craftingskills/crafting/config/craftConfig.cfg
+++ b/099/pkg/skills/craftingskills/crafting/config/craftConfig.cfg
@@ -104,7 +104,7 @@ Crafting StoneCrafting
 	CraftDelay	1
 	CraftLoops	1
 	CraftAnim	0x0021
-	CraftSound	0x126
+	CraftSound	0x3bb
  
 	Repair		1
 	Fortify		1
