--- a/099/pkg/skills/craftingskills/tinkering/config/tinkering.cfg
+++ b/099/pkg/skills/craftingskills/tinkering/config/tinkering.cfg
@@ -437,6 +437,15 @@ tinkeritem 0x102a
 	mark			1
 }
 
+tinkeritem 0x12b3
+{
+	name			mallet and chisel
+	material		4
+	type			metal
+	skill		50
+	mark			1
+}
+
 
 
 
@@ -541,30 +550,12 @@ tinkeritem 0x09d7
 	mark			1
 }
 
-tinkeritem 0x0b46
-{
-	name			a small vase
-	material		10
-	type			clay
-	skill		25
-	mark			1
-}
-
 tinkeritem 0x0b48
 {
 	name			a small vase
 	material		10
 	type			clay
 	skill		25
-	mark			1
-}
-
-tinkeritem 0x0b45
-{
-	name			a large vase
-	material		20
-	type			clay
-	skill		40
 	mark			1
 }
 
@@ -601,66 +592,6 @@ tinkeritem 0x11c7
 	material		20
 	type			clay
 	skill		25
-	mark			1
-}
-
-tinkeritem 0x1224
-{
-	name			a statue
-	material		50
-	type			stone
-	skill		50
-	retain		1
-	mark			1
-}
-
-tinkeritem 0x1225
-{
-	name			a statue
-	material		50
-	type			stone
-	skill		50
-	retain		1
-	mark			1
-}
-
-tinkeritem 0x1226
-{
-	name			a gargoyle statue
-	material		50
-	type			stone
-	skill		50
-	retain		1
-	mark			1
-}
-
-tinkeritem 0x1227
-{
-	name			a statue
-	material		50
-	type			stone
-	skill		50
-	retain		1
-	mark			1
-}
-
-tinkeritem 0x1228
-{
-	name			a pegasus statue
-	material		70
-	type			stone
-	skill		60
-	retain		1
-	mark			1
-}
-
-tinkeritem 0x12ca
-{
-	name			a bust
-	material		50
-	type			stone
-	skill		45
-	retain		1
 	mark			1
 }
 
