--- a/099/pkg/skills/craftingskills/woodworking/config/carpentry.cfg
+++ b/099/pkg/skills/craftingskills/woodworking/config/carpentry.cfg
@@ -579,24 +579,6 @@ carpentry 0x0b4b
 //  house add-ons
 ///////////////////
 
-capentry 0xB000
-{
-	Name			anvil deed
-	Type			wood
-	material		100
-	skill		90
-	time			6
-}
-
-capentry 0xB001
-{
-	Name			small forge deed
-	Type			wood
-	material		100
-	skill		90
-	time			6
-}
-
 capentry 0xB002
 {
 	Name			training dummy deed
@@ -844,6 +826,17 @@ carpentry 0x2805
 	material		10
 	skill		40
 	time			4
+	retain		1
+	mark			1
+}
+
+carpentry 0x2805
+{
+	Name			a fiddle
+	Type			wood
+	material		10
+	skill		80
+	time			5
 	retain		1
 	mark			1
 }
