- Forgot to add Stonecrafting to the list of CraftConfig skills. Added - Forgot to change the objtype entries for the small stone bench and the stone war sword. Fixed. - Small corrections to the Stonecrafting menus. - The objtype for the fiddle was wrong in the carpentry config file. Fixed.

--- a/099/pkg/skills/craftingskills/crafting/config/craftConfig.cfg
+++ b/099/pkg/skills/craftingskills/crafting/config/craftConfig.cfg
@@ -46,6 +46,7 @@ Crafting Skills
 	Skill	Alchemy
 	Skill	Blacksmithy
 	Skill	Carpentry
+	Skill	Stonecrafting
 	Skill	Cartography
 	Skill	Cooking
 	Skill	Tailoring
@@ -96,7 +97,7 @@ Crafting Blacksmithy
 	EndMessage	smithing
 }
 
-Crafting StoneCrafting
+Crafting Stonecrafting
 {
 	Name		Stonecrafting
 	Attribute	Stonecrafting
