--- a/trunk/099/pkg/skills/craftingskills/crafting/config/craftConfig.cfg
+++ b/trunk/099/pkg/skills/craftingskills/crafting/config/craftConfig.cfg
@@ -46,6 +46,7 @@ Crafting Skills
 	Skill	Alchemy
 	Skill	Blacksmithy
 	Skill	Carpentry
+	Skill	Stonecrafting
 	Skill	Cartography
 	Skill	Cooking
 	Skill	Tailoring
@@ -96,7 +97,7 @@ Crafting Blacksmithy
 	EndMessage	smithing
 }
 
-Crafting StoneCrafting
+Crafting Stonecrafting
 {
 	Name		Stonecrafting
 	Attribute	Stonecrafting
