--- a/trunk/099/pkg/skills/craftingskills/stonecrafting/config/StoneMenu.cfg
+++ b/trunk/099/pkg/skills/craftingskills/stonecrafting/config/StoneMenu.cfg
@@ -31,9 +31,9 @@ Craftitem Index
 	SkillID	Stonecrafting
 
 	Group	Furniture
-	Group	Containers
+//	Group	Containers
 	Group	Instruments
-	Group	Gargish_Armament
+	Group	Gargish Armament
 	Group	Miscelaneous
 	Group	Addons
 }
@@ -76,13 +76,13 @@ Craftitem Addons
 	Item	FireplaceDeed
 }
 
-Craftitem Gargish_Armament
+Craftitem Gargish Armament
 {
-	Item	GargishStoneArms
-	Item	GargishStoneLeggings
-	Item	GargishStoneChest
-	Item	GargishStoneKilt
-	Item	LargeStoneShield
+	Item	GargishStoneArms2
+	Item	GargishStoneLeggings2
+	Item	GargishStoneChest2
+	Item	GargishStoneKilt2
+	Item	GargishLargeStoneShield
 	Item	StoneWarSword
 }
 
