--- a/trunk/099/pkg/skills/craftingskills/stonecrafting/config/stonecrafting.cfg
+++ b/trunk/099/pkg/skills/craftingskills/stonecrafting/config/stonecrafting.cfg
@@ -85,7 +85,7 @@ stoneitem 0x12ca
 ////////////////////////
 // furniture
 ////////////////////////
-stoneitem 0x3dff
+stoneitem 0x45b
 {
 	Name			small stone bench
 	Type			stone
@@ -215,7 +215,7 @@ stoneitem 0x4205
 // Weapons
 ////////////
 
-stoneitem 0x405b
+stoneitem 0x4071
 {
 	Name			stone war sword
 	Type			stone
