--- a/trunk/099/pkg/combat/weapons/itemdesc.cfg
+++ b/trunk/099/pkg/combat/weapons/itemdesc.cfg
@@ -2197,6 +2197,7 @@ Weapon 0x406f
 Weapon 0x4070
 {
 	Name			GlassStaff
+	Desc			gargish glass staff
 	Speed		30
 	Damage		3d6+3
 	Attribute		Mace
@@ -2260,6 +2261,7 @@ Weapon 0x4072
 Weapon 0x4073
 {
 	Name			GlassSword
+	Desc			Gargish Glass Sword
 	Speed		35
 	Damage		4d6+3
 	Attribute		Swords
