--- a/trunk/099/pkg/skills/craftingskills/blacksmithy/blacksmithy.cfg
+++ b/trunk/099/pkg/skills/craftingskills/blacksmithy/blacksmithy.cfg
@@ -741,6 +741,28 @@ blacksmithy 0X1b74
 	bulk_deed		1
 }
 
+blacksmithy 0X1bc4
+{ 
+	Name			order shield
+	material		50
+	type			metal
+	skill		70
+	time			5
+	hasquality	1
+	bulk_deed		1
+}
+
+blacksmithy 0X1bc3
+{ 
+	Name			chaos shield
+	material		50
+	type			metal
+	skill		70
+	time			5
+	hasquality	1
+	bulk_deed		1
+}
+
 
 
 
@@ -1325,7 +1347,7 @@ blacksmithy 0x42de
 // Shields
 blacksmithy 0X4202
 { 
-	Name			small plate shield
+	Name			gargish small plate shield
 	material		20
 	type			metal
 	skill		40
@@ -1336,7 +1358,7 @@ blacksmithy 0X4202
 
 blacksmithy 0X4203
 { 
-	Name			medium plate shield
+	Name			gargish medium plate shield
 	material		30
 	type			metal
 	skill		50
@@ -1347,13 +1369,35 @@ blacksmithy 0X4203
 
 blacksmithy 0X4204
 { 
-	Name			large plate shield
+	Name			gargish large plate shield
 	material		50
 	type			metal
 	skill		70
 	time			5
 	hasquality	1
 	bulk_deed		0
+}
+
+blacksmithy 0X422a
+{ 
+	Name			gargish order shield
+	material		50
+	type			metal
+	skill		70
+	time			5
+	hasquality	1
+	bulk_deed		1
+}
+
+blacksmithy 0X4228
+{ 
+	Name			gargish chaos shield
+	material		50
+	type			metal
+	skill		70
+	time			5
+	hasquality	1
+	bulk_deed		1
 }
 
 // Weapons
