--- a/trunk/099/pkg/skills/craftingskills/blacksmithy/menu.cfg
+++ b/trunk/099/pkg/skills/craftingskills/blacksmithy/menu.cfg
@@ -13,7 +13,7 @@ Item armor
 	Submenu	0x1412	helms		Helmets
 	Submenu	0x1b75	shields	Shields
 	Submenu	0x1415	tokunoplate	Plate Yoroi
-//	Submenu	0x1415	gargisharmor	Gargish Plate
+	Submenu	0x1415	gargisharmor	Gargish Plate
 }
 
 Item platemail
@@ -66,9 +66,9 @@ Item weapons
 	Submenu	0x0f51	lightblades	Light Blades
 	Submenu	0x1402	elvenweapons	Elven Weapons
 	Submenu	0x1402	tokunoweapons	Tokuno Weapons
-//	Submenu	0x1415	gargishlight	Gargish Light
-//	Submenu	0x1415	gargishmedium	Gargish Medium
-//	Submenu	0x1415	gargishheavy	Gargish Heavy
+	Submenu	0x1415	gargishlight	Gargish Light
+	Submenu	0x1415	gargishmedium	Gargish Medium
+	Submenu	0x1415	gargishheavy	Gargish Heavy
 }
 
 Item blades
