--- a/trunk/099/pkg/skills/craftingskills/tinkering/config/tinkering.cfg
+++ b/trunk/099/pkg/skills/craftingskills/tinkering/config/tinkering.cfg
@@ -526,6 +526,26 @@ tinkeritem 0x2fb8
 	Exceptional		1
 }
 
+tinkeritem 0x45b1
+{
+	name			female gargoyle glasses
+	material		20
+	type			glass
+	skill		70
+	mark			1
+	Exceptional		1
+}
+
+tinkeritem 0x4644
+{
+	name			male gargoyle glasses
+	material		20
+	type			glass
+	skill		70
+	mark			1
+	Exceptional		1
+}
+
 
 
 ///////////////////
@@ -1016,5 +1036,29 @@ tinkering 0x170b6
 	skill		90
 	skill2	Magery
 	Difficulty2		90
+}
+
+tinkering 0x4073
+{ 
+	Name			a gargish glass sword
+	Type			glass
+	material		40
+	skill		70
+	Exceptional	1
+	time			7
+	retain		1
+	mark			1
+}
+
+carpentry 0x4070
+{
+	Name			a gargish glass staff
+	Type			wood
+	material		30
+	skill		70
+	Exceptional	1
+	time			5
+	retain		1
+	mark			1
 }
 
