--- a/trunk/099/pkg/skills/craftingskills/woodworking/config/CarpMenu.cfg
+++ b/trunk/099/pkg/skills/craftingskills/woodworking/config/CarpMenu.cfg
@@ -34,8 +34,9 @@ Craftitem Index
 	Group	Containers
 	Group	Instruments
 	Group	Weapons
-	Group	Archery
 	Group	Armor
+	Group	Archery
+	Group	Gargish Armament
 	Group	Miscelaneous
 	Group	Addons
 }
@@ -129,6 +130,14 @@ Craftitem Weapons
 	Item	Tetsubo
 	Item	Bokuto
 	Item	Nunchaku
+}
+
+Craftitem Gargish Armament
+{
+	Item	SerpentstoneStaff
+	Item	GargishGnarledStaff
+	Item	GargishWoodenShield
+	Item	GargishKiteShield
 }
 
 Craftitem Addons
