- Updated some descriptions for gargish equipment. - Added the Order and Chaos shields to the Blacksmithy craft config so they can be repaired. - Most gargish equipment has been added to crafting menus.

--- a/099/pkg/combat/armor/itemdesc.cfg
+++ b/099/pkg/combat/armor/itemdesc.cfg
@@ -4006,6 +4006,7 @@ Armor 0x45a4
 Armor 0x4200
 {
 	Name			GargishWoodenShield
+	Desc			gargish wooden shield
 	AR			12
 	VendorSellsFor	30
 	VendorBuysFor	10
@@ -4020,6 +4021,7 @@ Armor 0x4200
 Armor 0x4202
 {
 	Name			GargishSmallPlateShield
+	Desc			gargish small plate shield
 	AR			12
 	VendorSellsFor	130
 	VendorBuysFor	45
@@ -4049,6 +4051,7 @@ Armor 0x4201
 Armor 0x4203
 {
 	Name			GargishMediumPlateShield
+	Desc			gargish medium plate shield
 	AR			18
 	VendorSellsFor	200
 	VendorBuysFor	67
@@ -4064,6 +4067,7 @@ Armor 0x4203
 Armor 0x4204
 {
 	Name			GargishLargePlateShield
+	Desc			gargish large plate shield
 	AR			25
 	VendorSellsFor	260
 	VendorBuysFor	100
@@ -4079,6 +4083,7 @@ Armor 0x4204
 Armor 0x4205
 {
 	Name			GargishLargeStoneShield
+	Desc			gargish large stone shield
 	AR			25
 	VendorSellsFor	260
 	VendorBuysFor	100
