--- a/099/pkg/skills/craftingskills/tailoring/leather_items.cfg
+++ b/099/pkg/skills/craftingskills/tailoring/leather_items.cfg
@@ -658,4 +658,85 @@ leather 0x27d6
 	hasquality	1
 }
 
+/////////////////
+// Stygian Abyss
+/////////////////
+
+// Armor
+leather 0x404a
+{ 
+	Name			gargish leather chest
+	material		45
+	type			hide
+	skill		95
+	time			3
+	hasquality	1
+	bulk_deed		0
+}
+
+leather 0x404e
+{ 
+	Name			gargish leather leggings
+	material		32
+	type			hide
+	skill		90
+	time			3
+	hasquality	1
+	bulk_deed		0
+}
+
+leather 0x404c
+{ 
+	Name			gargish leather kilt
+	material		45
+	type			hide
+	skill		90
+	time			3
+	hasquality	1
+	bulk_deed		0
+}
+
+leather 0x4048
+{ 
+	Name			gargish leather arms
+	material		32
+	type			hide
+	skill		85
+	time			3
+	hasquality	1
+	bulk_deed		0
+}
+
+leather 0x41d8
+{ 
+	Name			leather talons
+	material		15
+	type			hide
+	skill		80
+	time			3
+	hasquality	1
+	bulk_deed		0
+}
+
+leather 0x450d
+{ 
+	Name			gargoyle belt
+	material		15
+	type			hide
+	skill		80
+	time			3
+	hasquality	1
+	bulk_deed		0
+}
+
+leather 0x457e
+{ 
+	Name			leather wing armor
+	material		25
+	type			hide
+	skill		80
+	time			3
+	hasquality	1
+	bulk_deed		0
+}
 
