--- a/099/pkg/skills/craftingskills/tailoring/menu.cfg
+++ b/099/pkg/skills/craftingskills/tailoring/menu.cfg
@@ -9,6 +9,8 @@ Keymenu clothmenu
 	Submenu	0x1517	elven_clothes	Elven Clothes
 	Submenu	0x1517	tokuno_clothes	Tokuno Clothes
 	Submenu	0x1517	tokuno_clothes2	More Tokuno Clothes
+	Submenu	0x1517	gargish_clothes	Gargish Clothes
+	Submenu	0x1517	cloth_armor	Gargish Cloth Armor
 	Submenu	0x153D	other_cloth	Misc.
 }
 
@@ -111,6 +113,26 @@ Submenu tokuno_clothes2
 	Entry	0x27ec	Jin-Baori
 }
 
+Submenu gargish_clothes
+{
+	show_upgrade_options	0
+	Entry	0x4000	Gargish Robe
+	Entry	0x4002	Gargish Fancy Robe
+	Entry	0x50d8	Gargoyle Half Apron
+	Entry	0x46aa	Gargoyle Body Sash
+	Entry	0x46b4	Gargoyle Body Sash
+}
+
+Item cloth_armor
+{
+	show_upgrade_options	1
+	Entry	0x4062	Gargish Cloth Chest
+	Entry	0x4064	Gargish Cloth Kilt
+	Entry	0x4060	Gargish Cloth Arms
+	Entry	0x4066	Gargish Cloth Leggings
+	Entry	0x45a4	Cloth Wing Armor
+}
+
 
 Item leathermenu
 {
@@ -124,6 +146,7 @@ Item leathermenu
 	Submenu	0x13CC	leather_yoroi		Leather Yoroi
 	Submenu	0x13cc	ninja_gear			Ninja Gear
 	Submenu	0x13DB	studded_yoroi		Studded Yoroi
+	Submenu	0x13DB	gargish_leather		Gargish Leather
 }
 
 Item leather_armor
@@ -239,3 +262,16 @@ Item studded_yoroi
 	Entry	0x27d4	Studded Kabuto
 	Entry	0x27cf	Studded Jingasa
 }
+
+Item gargish_leather
+{
+	show_upgrade_options	1
+	Entry	0x404a	Gargish Leather chest
+	Entry	0x404c	Gargish Leather Kilt
+	Entry	0x4048	Gargish Leather Arms
+	Entry	0x404e	Gargish Leather Leggings
+	Entry	0x457e	Leather Wing Armor
+	Entry	0x450d	Gargoyle Belt
+	Entry	0x41d8	Leather Talons
+}
+
