--- a/099/pkg/skills/craftingskills/tinkering/config/TinkMenu.cfg
+++ b/099/pkg/skills/craftingskills/tinkering/config/TinkMenu.cfg
@@ -36,6 +36,7 @@ Craftitem Index
 	Group	Tools
 	Group	Utensils
 	Group	Clay
+	Group	Glass Equipment
 	Group	Magic
 }
 
@@ -194,4 +195,13 @@ Craftitem Clay
 	Item	flowerpot
 	Item	largeflowerpot
 	Item	Porcelain
+}
+
+Craftitem Glass Equipment
+{
+	Item	ElvenGlasses
+	Item	GargishGlasses
+	Item	GargishGlasses2
+	Item	GlassStaff
+	Item	GlassSword
 }
