--- a/099/pkg/skills/craftingskills/woodworking/config/carpentry.cfg
+++ b/099/pkg/skills/craftingskills/woodworking/config/carpentry.cfg
@@ -1390,3 +1390,57 @@ Element 0x2b73
 	mark			1
 }
 
+/////////////////////
+// Stygian Abyss
+/////////////////////
+// Weapons
+
+carpentry 0x48b8
+{ 
+	Name			a gargish gnarled staff
+	Type			wood
+	material		30
+	skill		70
+	Exceptional	1
+	time			5
+	retain		1
+	mark			1
+}
+
+carpentry 0x406f
+{
+	Name			a serpentstone staff
+	Type			wood
+	material		30
+	skill		70
+	Exceptional	1
+	time			5
+	retain		1
+	mark			1
+}
+
+// Shields
+carpentry 0x4200
+{ 
+	Name			a gargish wooden shield
+	Type			wood
+	material		25
+	skill		45
+	Exceptional	1
+	time			4
+	retain		1
+	mark			1
+}
+
+carpentry 0x4201
+{ 
+	Name			a gargish kite shield
+	Type			wood
+	material		45
+	skill		60
+	Exceptional	1
+	time			6
+	retain		1
+	mark			1
+}
+
