--- a/099/pkg/skills/craftingskills/tailoring/cloth_items.cfg
+++ b/099/pkg/skills/craftingskills/tailoring/cloth_items.cfg
@@ -355,3 +355,110 @@ tailoring 0x3174
 	skill	95
 }
 
+/////////////////
+// Stygian Abyss
+/////////////////
+
+// Clothes
+
+tailoring 0x4000
+{
+	Name		gargish robe
+	material	18
+	type			cloth
+	skill	85
+	time			1
+}
+
+tailoring 0x4002
+{
+	Name		gargish fancy robe
+	material	20
+	type			cloth
+	skill	95
+	time			1
+}
+
+tailoring 0x50d8
+{
+	Name		gargoyle half apron
+	material	8
+	type			cloth
+	skill	50
+	time			1
+}
+
+tailoring 0x46aa
+{
+	Name		gargoyle body sash
+	material	4
+	type			cloth
+	skill	45
+	time			1
+}
+
+tailoring 0x46b4
+{
+	Name		gargoyle body sash
+	material	4
+	type			cloth
+	skill	45
+	time			1
+}
+
+// Armor
+tailoring 0x4062
+{ 
+	Name			gargish cloth chest
+	material		45
+	type			cloth
+	skill		95
+	time			3
+	hasquality	1
+	bulk_deed		0
+}
+
+tailoring 0x4066
+{ 
+	Name			gargish cloth leggings
+	material		32
+	type			cloth
+	skill		90
+	time			3
+	hasquality	1
+	bulk_deed		0
+}
+
+tailoring 0x4064
+{ 
+	Name			gargish cloth kilt
+	material		45
+	type			cloth
+	skill		90
+	time			3
+	hasquality	1
+	bulk_deed		0
+}
+
+tailoring 0x4060
+{ 
+	Name			gargish cloth arms
+	material		32
+	type			cloth
+	skill		85
+	time			3
+	hasquality	1
+	bulk_deed		0
+}
+
+tailoring 0x45a4
+{ 
+	Name			cloth wing armor
+	material		25
+	type			cloth
+	skill		80
+	time			3
+	hasquality	1
+	bulk_deed		0
+}
+
